설명전 커밋

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,13 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/mainTableLayout"
         app:tabSelectedTextColor="@color/black"
-        app:tabIndicator="@color/black"
+        app:tabIndicatorColor="@color/black"
         app:tabIndicatorHeight="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <ListView
+        android:id="@+id/pizzaStoreListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
@@ -19,8 +24,6 @@
         android:id="@+id/mainViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
-
 
 
 
